[Desktop][iOS][Payment Request] Allow re-entering existing cards.

Before this patch, entering an existing card into Payment Request sheet
would show an error "This card is already used". This happened for both
local cards, which are visible in Payment Request sheet, and for server
cards, which can be accessed only in tokenized form through Google Pay.

This patch allows re-entering existing cards.

After this patch, entering an existing card into Payment Request sheet
is allowed. This sheet may display two identical cards after the user
added the card. Autofill will deduplicate two identical local cards, so
the consequent autofill popups and Payment Request sheets will display
the card at most once. In settings, the user will see the card twice
only if one card is local (entered through Payment Request sheet) and
the other card is from the server (synced down from Google Payments
account).

Android already behaves this way.

Bug: 905396
Change-Id: I587e682855075f7035573f89dfd77711b45879ac
Reviewed-on: https://chromium-review.googlesource.com/c/1340377
Reviewed-by: Moe Ahmadi <mahmadi@chromium.org>
Reviewed-by: Ganggui Tang <gogerald@chromium.org>
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610971}
Former-commit-id: 5e7d7df122edd4e17b24626944050756ac486107