ios/chrome/browser/ui/payments/credit_card_edit_mediator.mm
@@ -47,27 +47,12 @@ bool IsValidCreditCardNumber(const base::string16& card_number,
   std::set<std::string> supported_card_networks(
       payment_request->supported_card_networks().begin(),
       payment_request->supported_card_networks().end());
-  if (!::autofill::IsValidCreditCardNumberForBasicCardNetworks(
-          card_number, supported_card_networks, error_message)) {
-    return false;
-  }
-
-  // Check if another credit card has already been created with this number.
-  // TODO(crbug.com/725604): the UI should offer to load / update the existing
-  // credit card info.
-  autofill::CreditCard* existing_card =
-      payment_request->GetPersonalDataManager()->GetCreditCardByNumber(
-          base::UTF16ToASCII(card_number));
-  // If a card exists, it could be the one currently being edited.
-  if (!existing_card || (credit_card_to_edit && credit_card_to_edit->guid() ==
-                                                    existing_card->guid())) {
-    return true;
-  }
-  if (error_message) {
-    *error_message = l10n_util::GetStringUTF16(
-        IDS_PAYMENTS_VALIDATION_ALREADY_USED_CREDIT_CARD_NUMBER);
-  }
-  return false;
+  return ::autofill::IsValidCreditCardNumberForBasicCardNetworks(
+      card_number, supported_card_networks, error_message);
+  // TODO(crbug.com/725604): The UI should offer to load / update the existing
+  // credit card info if another local credit card has already been created with
+  // this number. (Does not apply to server cards, which can be accessed only in
+  // tokenized form through Google Pay.)
 }
 
 }  // namespace
